--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,26 @@ html, body {
   height: 100%; }
 
 body {
-  font-family: sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.1em; }
+  body a {
+    color: inherit;
+    text-decoration: none; }
+    body a:hover {
+      color: inherit;
+      text-decoration: underline; }
 
 .outbox {
   max-width: 100%;
   min-height: 100%; }
+  .outbox .inbox {
+    padding-bottom: 40px; }
   .outbox .title {
-    font-size: 4em;
+    font-size: 4.5em;
     text-align: center;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    padding-top: 30px;
+    font-family: 'Raleway', sans-serif; }
 
 #head {
   background: #ff7242; }
@@ -103,14 +114,14 @@ body {
 
 #faq {
   background-color: #4183D7;
-  background-image: url(../images/hill.svg);
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: 100% auto; }
+  #faq .title {
+    padding-top: 0px; }
   #faq .inbox {
     margin: 0 auto;
     width: 60%;
-    height: 500px;
     border-radius: 10px; }
     @media (max-width: 1100px) {
       #faq .inbox {
@@ -134,20 +145,68 @@ body {
           border-right: 1px solid black; }
     #faq .inbox .cards {
       flex-flow: row wrap;
-      display: none; }
+      display: none;
+      font-size: 1.15em; }
       #faq .inbox .cards.active {
         display: flex; }
       #faq .inbox .cards .card {
-        flex-basis: 50%;
+        flex-basis: 100%;
         padding: 10px;
         padding-top: 10px; }
         #faq .inbox .cards .card .q {
-          color: gold; }
+          color: #83d741;
+          font-size: 1.05em;
+          font-weight: bold; }
         #faq .inbox .cards .card .a {
           padding-top: 5px; }
 
 #sponsors {
-  background: #8bc97c; }
+  background: #235ea8;
+  min-height: initial;
+  color: white; }
+  #sponsors .title {
+    color: #ff7242; }
+  #sponsors .inbox {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center; }
+    #sponsors .inbox p {
+      margin-bottom: 30px; }
+    #sponsors .inbox i {
+      font-style: italic; }
+    #sponsors .inbox div .button {
+      padding: 15px 30px;
+      border-radius: 10px;
+      background-color: #194377;
+      text-transform: uppercase;
+      transition: .35s; }
+      #sponsors .inbox div .button:hover {
+        background-color: #93b9e8;
+        color: black;
+        border-radius: 15px; }
+
+#partners {
+  min-height: initial;
+  margin-bottom: 0px;
+  background-color: #153a67;
+  color: #d74a41; }
+  #partners .inbox {
+    display: table;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%; }
+    #partners .inbox .partner {
+      height: 130px;
+      display: inline-block;
+      float: left;
+      width: 100%; }
+      #partners .inbox .partner .stream {
+        background-image: url("../images/sponsors/stream.jpg");
+        background-size: auto auto;
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 100%;
+        height: 100%; }
 
 #team {
   background: linear-gradient(#34495e, #2c3e50); }
