--- a/css/style.scss
+++ b/css/style.scss
@@ -14,17 +14,31 @@ html, body {
   height: 100%;
 }
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.1em;
+  a {
+    color: inherit;
+    text-decoration: none;
+    &:hover {
+      color: inherit;
+      text-decoration: underline;
+    }
+  }
 }
 
 .outbox {
   max-width: 100%;
   min-height: 100%;
   //border: 1px solid black;
+  .inbox {
+    padding-bottom: 40px;
+  }
   .title {
-    font-size: 4em;
+    font-size: 4.5em;
     text-align:center;
     margin-bottom: 20px;
+    padding-top: 30px;
+    font-family: 'Raleway', sans-serif;
   }
 }
 
@@ -128,14 +142,16 @@ body {
 #faq {
   background-color: #4183D7;
   //background: linear-gradient(#e67e22,#e74c3c);
-  background-image: url(../images/hill.svg);
+  //background-image: url(../images/hill.svg);
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: 100% auto;
+  .title {
+    padding-top: 0px;
+  }
   .inbox {
     margin: 0 auto;
     width: 60%;
-    height: 500px;
     border-radius: 10px;
     @media (max-width: 1100px) {
       width: 80%;
@@ -163,15 +179,18 @@ body {
     .cards {
       flex-flow: row wrap;
       display: none;
+      font-size: 1.15em;
       &.active {
         display:flex;
       }
       .card {
-        flex-basis: 50%;
+        flex-basis: 100%;
         padding: 10px;
         padding-top: 10px;
         .q {
-          color: gold;
+          color: #83d741;
+          font-size: 1.05em;
+          font-weight: bold;
         }
         .a {
           padding-top: 5px;
@@ -182,8 +201,66 @@ body {
 }
 
 #sponsors {
-  background: #8bc97c;
+  background: #235ea8;
+  min-height: initial;
+  color: white;
+  .title {
+    color: #ff7242;
+  }
+  .inbox {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    p {
+      margin-bottom: 30px;
+    }
+    i {
+      font-style: italic;
+    }
+    div {
+      .button {
+        padding: 15px 30px;
+        border-radius: 10px;
+        background-color: #194377;
+        text-transform: uppercase;
+        transition: .35s;
+        &:hover {
+          background-color: #93b9e8;
+          color: black;
+          border-radius: 15px;
+        }
+      }
+    }
+  }
 }
+
+#partners {
+  min-height: initial;
+  margin-bottom: 0px;
+  background-color: #153a67;
+  color: #d74a41;
+  .inbox {
+    display: table;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    .partner {
+      height:130px;
+      display: inline-block;
+      float: left;
+      width: 100%;
+      .stream {
+        background-image: url("../images/sponsors/stream.jpg");
+        background-size: auto auto;
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+
 
 #team {
   background: linear-gradient(#34495e,#2c3e50);
