--- a/index.jade
+++ b/index.jade
@@ -105,18 +105,31 @@ html
           h2.text-center Sponsors
           .row
             .col-sm-12.text-center
-              p.lead We will be announcing our awesome sponsors soon! Want to get involved?
+              p.lead We will be announcing our full list of awesome sponsors soon! Want to get involved?
               a.btn.btn-primary.btn-lg.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=200 href='sponsor.pdf' target='_blank') Get the Sponsorship Packet!
+          br
+          br
+          br
+          .row.text-center
+            .col-sm-4
+              a(href='https://hackclub.com' target='_blank')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='hackclub.png' id='hackclub')
+            .col-sm-4
+              a(href='http://www.justinmind.com' target='_blank')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='justinmind.png' id='justinmind')
+            .col-sm-4
+              a(href='http://mlworks.com' target='_blank')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='mlw.png' id='mlw')
         hr
         #partners.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
           h2.text-center Partners
           .row.text-center
             .col-sm-6
               a(href='http://streameducation.org' target='_blank')
-                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='stream.png')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='stream.png' id='stream')
             .col-sm-6
               a(href='https://mlh.io' target='_blank')
-                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='mlh-logo.png')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='mlh.png' id='mlh')
         hr
         #update.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=1000)
           h2.text-center Subscribe
