--- a/index.jade
+++ b/index.jade
@@ -12,7 +12,7 @@ html
     link(rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Cabin')
     link(rel='stylesheet prefetch' href='style.css')
     script.
-      head.load('//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js','//rawgit.com/nckprsn/scrollme/master/jquery.scrollme.min.js','//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js','//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js','main.js')
+      head.load('https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js','https://rawgit.com/nckprsn/scrollme/master/jquery.scrollme.min.js','https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js','https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js','main.js')
   body
     .loading
       img#logo(src='logo_2.0_solo.svg')
@@ -23,9 +23,9 @@ html
         .row
           .col-sm-12
             h1#home SM Hacks
-            h3 September 17-18, 2016 @ <a target='_blank' href="https://www.google.com/maps/place/1875+S+Grant+St+%23800,+San+Mateo,+CA+94402/@37.5533826,-122.3024296,17z/data=!3m1!4b1!4m5!3m4!1s0x808f9ef1cda42827:0x1ee074e13be3c0f6!8m2!3d37.5533826!4d-122.3002409">Opera Mediaworks</a>
+            h3 September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a>
             p.lead San Mateo's first <b>high school</b> hackathon.
-            //a.btn.btn-lg.btn-default Sign up!
+            //- a.btn.btn-default.btn-lg.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=200 href='#') Register!
             br
             i.fa.fa-angle-down.fa-5x.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-translatey=500 data-rotatez=360 data-opacity=0)
     nav.navbar.navbar-default(data-spy='affix')
@@ -53,7 +53,7 @@ html
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000)
             .col-sm-4
               h3 What is SM Hacks?
-              p SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience.
+              p SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience. SM Hacks 2016 will be hosted at #[a(target='_blank' href='https://goo.gl/maps/H94iydpfHEn') Opera Mediaworks], in San Mateo.
             .col-sm-4
               h3 What is a hackathon?
               p A hackathon is a 24-hour programming marathon where your ideas come to life. Over the course of the weekend, students from all backgrounds and all skill levels collaborate in teams of up to four to build something awesome.
@@ -83,7 +83,7 @@ html
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000)
             .col-sm-4
               h3 What is the schedule like?
-              p It will be from Saturday, September 17 through Sunday, September 18th. Be sure to check back for a more specific schedule, but don't worry! There will be plenty of fun activities that will keep you entertained.
+              p It will be from Saturday, September 17 through Sunday, September 18, 2016. Be sure to check back for a more specific schedule, but don't worry! There will be plenty of fun activities that will keep you entertained.
             .col-sm-4
               h3 What if I have another question?
               p Email us at <a href='mailto:hi@smhacks.com'>hi@smhacks.com</a> if you have any additional questions. We are always happy to help!
@@ -112,6 +112,14 @@ html
           br
           .row.text-center
             .col-sm-6
+              a(href='http://operamediaworks.com/' target='_blank')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='opera.png' id='opera')
+            .col-sm-6
+              a(href='http://www.vilynx.com/' target='_blank')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='vilynx.png' id='vilynx')
+          br
+          .row.text-center
+            .col-sm-6
               a(href='http://www.justinmind.com' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='justinmind.png' id='justinmind')
             .col-sm-6
@@ -121,15 +129,20 @@ html
         #partners.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
           h2.text-center Partners
           .row.text-center
-            .col-sm-4
+            .col-sm-6
               a(href='https://hackclub.com' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='hackclub.png' id='hackclub')
-            .col-sm-4
-              a(href='http://streameducation.org' target='_blank')
-                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='stream.png' id='stream')
-            .col-sm-4
+            .col-sm-6
               a(href='https://mlh.io' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='mlh.png' id='mlh')
+          br
+          .row.text-center
+            .col-sm-6
+              a(href='https://www.hackerearth.com/' target='_blank')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='hackerearth.png' id='hackerearth')
+            .col-sm-6
+              a(href='http://streameducation.org' target='_blank')
+                img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='stream.png' id='stream')
         hr
         #update.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=1000)
           h2.text-center Subscribe
