--- a/index.jade
+++ b/index.jade
@@ -1,3 +1,4 @@
+//output:index.html
 //DESIGNED BY BEN PANG (Github: @molarmanful)
 doctype html
 html
@@ -23,9 +24,13 @@ html
         .row
           .col-sm-12
             h1#home SM Hacks
-            h3 September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a>
-            p.lead San Mateo's first <b>high school</b> hackathon.
-            //- a.btn.btn-default.btn-lg.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=200 href='#') Register!
+            h3 San Mateo's first <b>high school</b> hackathon.
+            p.lead September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a>
+            .btn-group
+              a.btn.btn-default.btn-lg.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-opacity=0 data-translatex=-500 href='https://smhacks.typeform.com/to/XokTDO' target='_blank') Register!
+              a.btn.btn-default.btn-lg.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-opacity=0 data-translatex=500 href='https://smhacks.typeform.com/to/XokTDO' target='_blank') Sign up as a mentor!
+            br
+            br
             br
             i.fa.fa-angle-down.fa-5x.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-translatey=500 data-rotatez=360 data-opacity=0)
     nav.navbar.navbar-default(data-spy='affix')
@@ -63,7 +68,7 @@ html
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000)
             .col-sm-4
               h3 Do I have to be in high school?
-              p Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. College students are welcome to help out as mentors!
+              p Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. However, college students are welcome to help out. To mentor or lead a workshop, click #[a(target='_blank' href='https://smhacks.typeform.com/to/avpXre') here] or email #[a(target='_blank' href='mailto:volunteer@smhacks.com') volunteer@smhacks.com] for more details.
             .col-sm-4
               h3 What if I don't have a team or an idea?
               p No worries! It is not uncommon for people to come into the hackathon without an already-formed group, but we'll make sure you're matched with the right people. We will have a team formation and ideation session the first night so everyone can find the perfect team and come up with awesome ideas, so don't you worry first-time hackers!
@@ -79,14 +84,14 @@ html
               p Nothing! Just bring your beautiful self and ideas and we will provide you with the food, Wi-Fi, workspace, and swag!
             .col-sm-4
               h3 How can I apply?
-              p Applications are not open yet, but they will be processed on a rolling basis. To be notified when applications are open, #[a(href='#update') subscribe].
+              p Just fill out #[a(target='_blank' href='https://smhacks.typeform.com/to/XokTDO') this form]! Applications close Wednesday, August 31 but will be processed on a rolling basis. Make sure to #[a(href='#update') subscribe], follow us on #[a(target='blank' href='https://twitter.com/sanmateohacks') Twitter], and like us on #[a(target='blank' href='https://www.facebook.com/sanmateohacks') Facebook] for the latest updates!
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000)
             .col-sm-4
               h3 What is the schedule like?
               p It will be from Saturday, September 17 through Sunday, September 18, 2016. Be sure to check back for a more specific schedule, but don't worry! There will be plenty of fun activities that will keep you entertained.
             .col-sm-4
               h3 What if I have another question?
-              p Email us at <a href='mailto:hi@smhacks.com'>hi@smhacks.com</a> if you have any additional questions. We are always happy to help!
+              p Email us at #[a(href='mailto:hi@smhacks.com') hi@smhacks.com] if you have additional questions. Please email questions about mentoring or leading workshops to #[a(href='mailto:volunteer@smhacks.com') volunteer@smhacks.com] and sponsorship questions to #[a(href='mailto:sponsors@smhacks.com') sponsors@smhacks.com]. We are always happy to help!
         hr
         //
           #schedule.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
@@ -111,36 +116,32 @@ html
           br
           br
           .row.text-center
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='http://operamediaworks.com/' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='opera.png' id='opera')
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='http://www.vilynx.com/' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='vilynx.png' id='vilynx')
-          br
-          .row.text-center
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='http://www.justinmind.com' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='justinmind.png' id='justinmind')
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='http://mlworks.com' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='mlw.png' id='mlw')
         hr
         #partners.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
           h2.text-center Partners
           .row.text-center
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='https://hackclub.com' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='hackclub.png' id='hackclub')
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='https://mlh.io' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='mlh.png' id='mlh')
-          br
-          .row.text-center
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='https://www.hackerearth.com/' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='hackerearth.png' id='hackerearth')
-            .col-sm-6
+            .col-md-3.col-sm-6
               a(href='http://streameducation.org' target='_blank')
                 img.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000 src='stream.png' id='stream')
         hr
@@ -157,9 +158,8 @@ html
                     .input-group-btn
                       button.btn.btn-primary#s Submit!
                   .alert.alert-dismissible#a(role='alert')
+        br
         hr
-        br
-        br
         br
         br
         br
@@ -171,4 +171,10 @@ html
                 img(src='logo_2.0_solo.svg')
               .col-sm-7.hidden-xs
                 p.text-muted Made with <i class='fa fa-heart' style='color:#ff7242'></i> by SM Hacks.
-              .col-sm-4.hidden-xs
+              .col-sm-2.hidden-xs
+              .col-sm-2.col-xs-12.text-center
+                p
+                  a.btn.btn-info(href='https://www.facebook.com/sanmateohacks' target='_blank' style='background-color:transparent; border:none; display:inline-block')
+                    i.fa.fa-facebook-square.fa-3x
+                  a.btn.btn-info(href='https://twitter.com/sanmateohacks' target='_blank' style='background-color:transparent; border:none; display:inline-block')
+                    i.fa.fa-twitter-square.fa-3x
