--- a/index.jade
+++ b/index.jade
@@ -28,8 +28,10 @@ html
             p.lead September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a>
             .btn-group
               a.btn.btn-default.btn-lg.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-opacity=0 data-translatex=-500 href='https://smhacks.typeform.com/to/XokTDO' target='_blank') Register!
-              a.btn.btn-default.btn-lg.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-opacity=0 data-translatex=500 href='https://smhacks.typeform.com/to/XokTDO' target='_blank') Sign up as a mentor!
             br
+            br
+            br
+            p.medium Interested in mentoring or leading a workshop? Sign-up #[a(href='https://smhacks.typeform.com/to/avpXre' target='_blank') here]!
             br
             br
             i.fa.fa-angle-down.fa-5x.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-translatey=500 data-rotatez=360 data-opacity=0)
